project(opengl0)

add_executable(opengl0 main.cpp)

if(MSVC)
  if( MSVC11 )
    set(ASSIMP_MSVC_VERSION "vc110")
  elseif( MSVC12 )
    set(ASSIMP_MSVC_VERSION "vc120")
  elseif( MSVC_VERSION LESS 1910)
    set(ASSIMP_MSVC_VERSION "vc140")
  elseif( MSVC_VERSION LESS 1920)
    set(ASSIMP_MSVC_VERSION "vc141")
  elseif( MSVC_VERSION LESS 1930)
    set(ASSIMP_MSVC_VERSION "vc142")
  endif()
endif()

target_link_libraries(opengl0 optimized assimp-${ASSIMP_MSVC_VERSION}-mt.lib)
target_link_libraries(opengl0 debug assimp-${ASSIMP_MSVC_VERSION}-mtd.lib)
target_link_libraries(opengl0 glew32s.lib)
target_link_libraries(opengl0 glfw3.lib)
